<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.Activity_DiceBet">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/Theme.2K.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/Theme.2K.PopupOverlay"
            app:title="3D"
            app:titleTextColor="@color/white"
            app:titleMarginStart="12dp">


            <TextView
                android:id="@+id/time_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/time_remaining"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:layout_gravity="right"
                tools:ignore="RtlHardcoded" />


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/additional_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/appbar">

        <Button
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history" />



        <ImageView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/history"
            android:padding="7dp"
            android:src="@drawable/ic_help" />


        <TextView
            android:id="@+id/win_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:padding="7dp"
            android:text="@string/select_win_date"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.dingar.twok.core.ui.GridRecyclerView
        android:id="@+id/betSlips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/betLayout"
        android:layout_below="@id/additional_layout"
        android:background="#F4ECEC"
        android:columnWidth="65dp"
        tools:listitem="@layout/item_lottery" />

    <RelativeLayout
        android:id="@+id/betLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="number"
                android:paddingHorizontal="34dp"
                android:text="@string/default_amount" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="7dp"
            android:paddingStart="7dp"
            android:paddingBottom="3dp"
            android:text="@string/bet" />


    </RelativeLayout>

</RelativeLayout>